Fixed bug where you get stuck when the email or password are corrupted Fixed quick cookie-popup on index site when youve already accepted cookies

--- a/public/res/style/index.css
+++ b/public/res/style/index.css
@@ -321,7 +321,7 @@ main {
     bottom: 0;
     background-color: #383E42;
     color: #f2f2f3;
-    display: flex;
+    display: none;
     flex-direction: column;
     z-index: 15;
     padding: 1em;
